--- a/package.json
+++ b/package.json
@@ -1,3 +1,6 @@
+"scripts": {
+  "start": "node server.js"
+},
 {
   "name": "graph",
   "version": "1.0.0",
@@ -12,4 +15,6 @@
   },
   "author": "",
   "license": "ISC"
-}
+},
+"main": "server.js"
+
