--- a/package.json
+++ b/package.json
@@ -1,6 +1,3 @@
-"scripts": {
-  "start": "node server.js"
-},
 {
   "name": "graph",
   "version": "1.0.0",
@@ -11,10 +8,10 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
-},
-"main": "server.js"
+}
 
